added expiration parameters into handlers with check and doc
